# Genshin_Helper

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  fly.toml  helper.py  local.py  local_config.py  main.py  pyproject.toml  requirements.txt  view.py
api/: models.py  urls.py  views.py
docker/: Dockerfile
genshin/: helper.py  models.py
line/: flex_template.py  line_config.py  message_event.py  urls.py  views.py
line/flex_message_template/: sign_award.json
pages/: urls.py  views.py
src/: config.py  local.py  main.py  requirements.txt
src/api/: models.py  urls.py  views.py
src/genshin/: helper.py  models.py
src/line/: controller.py  flex_template.py  line_config.py  message_event.py  urls.py  views.py
src/pages/: urls.py  views.py
src/static/js/: home.js
src/utils/: genshin_helper.py  genshin_models.py  helper.py  logging_util.py
static/css/: home.css
templates/: home.html
terraform/: deploy.sh  destroy.sh
terraform/config/: template.tfvars
terraform/genshin_helper/: main.tf  variables.tf
terraform/genshin_helper/charts/: Chart.yaml  values.yaml
terraform/genshin_helper/charts/templates/: configmap.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
terraform/ingress/: main.tf
terraform/main/: main.tf  variables.tf
terraform/redis/: main.tf  output.tf  variables.tf
