[tool.poetry]
name = "genshin_helper"
version = "0.1.0"
description = ""
authors = ["FawenYo <twsky020600@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.6"
fastapi = "^0.65.2"
requests = "^2.25.1"
pytz = "^2021.1"
line-bot-sdk = "^1.19.0"
uvicorn = "^0.14.0"
uvloop = "^0.15.2"
aiofiles = "^0.7.0"
Jinja2 = "^3.0.1"
redis = "^3.5.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.1"
rich = "^10.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
