[tool.poetry]
name = "genshin_helper"
version = "0.1.0"
description = ""
authors = ["FawenYo <twsky020600@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.6"
fastapi = "^0.65.2"
requests = "^2.25.1"
pytz = "^2021.1"
line-bot-sdk = "^1.19.0"
uvicorn = "^0.14.0"
uvloop = "^0.15.2"
aiofiles = "^0.7.0"
Jinja2 = "^3.0.1"
redis = "^3.5.3"
python-dotenv = "^0.18.0"
rich = "^10.4.0"
tqdm = "^4.61.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
